chore: rename user to client
